# libs/ts/api-fetch/src/models/dtos_CreateSearchRecipe.ts
@@ -1,0 +1,11 @@
+/* istanbul ignore file */
+/* tslint:disable */
+/* eslint-disable */
+
+export type dtos_CreateSearchRecipe = {
+    author?: string;
+    id?: string;
+    imageUrl?: string;
+    ingredients?: Array<string>;
+    name?: string;
+};
