# libs/ts/api-fetch/src/models/dtos_KitchenPassResponse.ts
@@ -1,0 +1,12 @@
+/* istanbul ignore file */
+/* tslint:disable */
+/* eslint-disable */
+
+export type dtos_KitchenPassResponse = {
+    copyText?: string;
+    createdDate?: string;
+    enabled?: boolean;
+    lastUsedAction?: string;
+    lastUsedDate?: string;
+    skillUrl?: string;
+};
